[package]
name = "libogg"
version = "0.2.0"
authors = ["Hans Ole Hatzel <hhatzel@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Safe bindings for libogg."

[dependencies]
ogg-sys = "0.0.9"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
